# localcode

./: .gitignore  Cargo.toml  GUIDE.md  README.md  build-docker-cuda.ps1  build-docker-cuda.sh  check_out.txt  compile_error.txt  compile_errors.txt  compile_target_error.txt  error.txt  help.txt  info.txt  install.ps1  install.sh  localcode.json  opencode.json  output.txt  recommend.json  swap-config-utf8.md  swap-config.md  sys.txt  test_embed.rs
.github/workflows/: build.yml  docker-publish.yml
.opencode/: config.json  localcode.json
docker/server-cuda/: Dockerfile.cuda
skills/context-manager/: SKILL.md  router.sh
skills/smart-router-skill/: SKILL.md
src/: claude_code.jinja  config.rs  main.rs  models.rs  profiling.rs  runner.rs  test_dump.rs  ui.rs
