[package]
name = "localcode"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
inquire = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
rust-embed = "8.11.0"
console = "0.16.2"
indicatif = "0.18.4"
hf-hub = "0.5.0"
